## script_executor.py

class ScriptExecutor:
    """Class to execute scripts for device control."""

    def __init__(self):
        """Initializes the ScriptExecutor with default settings."""
        self.current_script = ""

    def execute_script(self, script: str) -> None:
        """Executes the given script.

        Args:
            script: The script to execute as a string.
        """
        self.current_script = script
        print(f"Executing script: {self.current_script}")
        # Placeholder for actual script execution logic
        # Example: Parse and execute commands from the script
        self._parse_and_execute(self.current_script)

    def _parse_and_execute(self, script: str) -> None:
        """Parses and executes the commands in the script.

        Args:
            script: The script to parse and execute.
        """
        # Example parsing logic
        commands = script.split('\n')
        for command in commands:
            if command.strip():
                self._execute_command(command.strip())

    def _execute_command(self, command: str) -> None:
        """Executes a single command from the script.

        Args:
            command: The command to execute.
        """
        # Placeholder for command execution logic
        # Example: Print the command or send it to a device
        print(f"Executing command: {command}")
        # Add specific command execution logic here
