## usb_control.py

import usb.core
import usb.util
from device_interface import DeviceInterface

class USBControl:
    """Class to manage USB communication with devices."""

    def __init__(self):
        """Initializes the USBControl with default settings."""
        self.device_interface = DeviceInterface()
        self.device = None

    def initialize_device(self, device_id: str) -> bool:
        """Initializes the specified USB device.

        Args:
            device_id: The identifier of the device to initialize.

        Returns:
            A boolean indicating if the device was successfully initialized.
        """
        try:
            # Find the USB device by its ID
            self.device = usb.core.find(idVendor=0x1234, idProduct=0x5678)  # Example Vendor and Product ID
            if self.device is None:
                print(f"Device {device_id} not found.")
                return False

            # Set the active configuration. With no arguments, the first configuration will be the active one
            self.device.set_configuration()
            print(f"Device {device_id} initialized successfully.")
            return True
        except usb.core.USBError as e:
            print(f"Failed to initialize device {device_id}: {e}")
            return False

    def read_analog_input(self, channel: int) -> float:
        """Reads an analog input from the specified channel.

        Args:
            channel: The channel number to read from.

        Returns:
            The analog input value as a float.
        """
        try:
            # Placeholder for actual read logic
            # Example: Read data from the device
            data = self.device.read(0x81, 64)  # Example endpoint and size
            analog_value = float(data[channel])  # Convert the data to a float
            print(f"Read analog input from channel {channel}: {analog_value}")
            return analog_value
        except usb.core.USBError as e:
            print(f"Failed to read analog input from channel {channel}: {e}")
            return 0.0

    def write_analog_output(self, channel: int, value: float) -> bool:
        """Writes an analog output to the specified channel.

        Args:
            channel: The channel number to write to.
            value: The value to write.

        Returns:
            A boolean indicating if the write operation was successful.
        """
        try:
            # Placeholder for actual write logic
            # Example: Write data to the device
            self.device.write(0x01, [int(value)])  # Example endpoint and data
            print(f"Wrote analog output to channel {channel}: {value}")
            return True
        except usb.core.USBError as e:
            print(f"Failed to write analog output to channel {channel}: {e}")
            return False
